# sqrap-vk

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
inc/: Alias.hpp  Application.hpp  Buffer.hpp  Camera.hpp  Command.hpp  CommandBuffer.hpp  Compiler.hpp  Core.hpp  DescriptorSet.hpp  Device.hpp  Fence.hpp  FrameBuffer.hpp  Gui.hpp  Image.hpp  Mesh.hpp  Object.hpp  Pipeline.hpp  RenderPass.hpp  Semaphore.hpp  Shader.hpp  Swapchain.hpp  pch.hpp  sqrap.hpp
sample/model/: sphere.gltf
sample/raster/: CMakeLists.txt  SampleApp.cpp  SampleApp.hpp  SampleScene.cpp  SampleScene.hpp  main.cpp
sample/raster/shaders/: Fragment.glsl  Lambert.shader  Shader.frag  Shader.vert  Vertex.glsl
src/: Application.cpp  Buffer.cpp  Camera.cpp  Command.cpp  CommandBuffer.cpp  Compiler.cpp  Core.cpp  DescriptorSet.cpp  Device.cpp  Fence.cpp  FrameBuffer.cpp  Gui.cpp  Image.cpp  Mesh.cpp  Object.cpp  Pipeline.cpp  RenderPass.cpp  RenderPasss.cpp  Semaphore.cpp  Shader.cpp  Swapchain.cpp
